rearranged a few things
